<?xml version="1.0"?>
<package format="3">
  <name>corgi_stair</name>
  <version>0.1.0</version>
  <description>Stair climbing algorithms with point cloud processing for Corgi (ROS 2).</description>
  <maintainer email="r12522806@ntu.edu.tw">Yatinghsu000627</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>corgi_msgs</depend>
  <depend>corgi_walk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>